Added series 3 of FKS, moved files around

--- a/custom.tex
+++ b/custom.tex
@@ -84,10 +84,8 @@
             \flushright
             \includegraphics[width = 0.7\linewidth, keepaspectratio = true]{logo/\seminarID/large.pdf}\\[0pt]
         \end{minipage}
-    } 
-    
-    \fancyfoot[LO,RE]{\texttt{\seminarEmail}}
+    }
+	\fancyfoot[LO,RE]{\href{mailto:\seminarEmail}{\texttt{\seminarEmail}}}
     \fancyfoot[C]{\small \thepage~z~\pageref{LastPage}}
-    \fancyfoot[LE,RO]{\texttt{\seminarURL}} 
-}
-    
+    \fancyfoot[LE,RO]{\href{\seminarURL}{\texttt{\seminarURL}}}
+}    
