--- a/files/fks/tasks/task2.tex
+++ b/files/fks/tasks/task2.tex
@@ -1,10 +1,5 @@
-\createTaskHeader[Štafetová cyklovačka]
-Dvojkolesovačka Trihedronu naberá na obrátkach. Pripravuje sa na nej úplne nová súťažná disciplína -- štafetová cyklovačka! O~čo ide?
-
-V~každom tíme je niekoľko jazdcov. Jeden z~nich je vždy na trati, zatiaľ čo ostatní môžu oddychovať v~sprievodnom vozidle.
-Potom sa môžu kedykoľvek prestriedať na ľubovoľnom mieste trate.
-
-Enka a~Kvík začali poctivo trénovať a~popri tom vymýšľajú víťaznú stratégiu. 
-Zatiaľ zvažujú dve. V~prvej budú obaja bicyklovať rovnako dlhý čas, v~druhej každý odbicykluje rovnakú časť trate. 
-Trať bude mať \SI{45}{\kilo\metre}. Enka dokáže na bicykli vyvinúť rýchlosť \SI[per-mode = symbol]{27}{\kilo\metre\per\hour},
-Kvík až \SI[per-mode = symbol]{35}{\kilo\metre\per\hour}. Ktorá stratégia je lepšia? Dokážete vymyslieť nejakú ešte lepšiu stratégiu? Aká stratégia je ideálna?
+\createTaskHeader[Prevracajúca sa šachovnica]
+V~Thajsku si Mišo kúpil zaujímavý predmet. Pozostáva zo štvorcovej dosky, ktorá sa skladá zo 100 menších štvorčekov,
+ktorých strany sú rovnobežné so stranami pôvodného štvorca. Miša by zaujímalo, v~ktorom mieste má podoprieť dosku tak, aby sa neprevrátila.
+Predavač na trhu mu to však nechcel prezradiť, že vraj na to má prísť sám. Povedal mu však, že štvorček na pozícii $[i,j]$ váži
+$1+\cos(i\pi/10)*\sin(j\pi/10)$ gramov. Samozrejme, že Mišo má k~dispozícii aj počítač ;-).
