--- a/files/fks/tasks/task3.tex
+++ b/files/fks/tasks/task3.tex
@@ -1,13 +1,8 @@
-\createTaskHeader[Surfovanie v~MHD]
-Spomínate si na príklad z~minulého semestra s~cestujúcim Vladkom v~39-tke? Tak tento príklad je jeho pokračovaním.
-Tentoraz Maťo, Mišo a~Kubo cestovali v~pražskom metre. Ako iste tušíte, opäť raz tam nezostalo veľa miesta, takže sa nemali čoho chytiť.
-Ani koeficient trenia medzi stropom a~rukou nebol veľmi priaznivý a~oni museli vymyslieť nový spôsob, ako udržať rovnováhu.
-Od vás by radi vedeli, či spadnú alebo nie.
+\createTaskHeader[Pohárová daktyloskopia]
+Enka sa naposledy zamýšlala nad otázkou, prečo keď sa dotkne prstami skleneného pohára s~vodou, tak okrem končekov svojich prstov \uv{nevidí nič}, iba bielu hmlu. Dokázali by ste jej poradiť?
 
-Maťo sa postaví bokom k~smeru jazdy. Na podlahu vždy pôsobí iba svojou tiažou.
-Presúvaním ťažiska v~konštantnej výške medzi rozkročenými nohami z~jednej nohy na druhú sa snaží udržať rovnováhu.
-Maťo váži \SI{81}{\kilo\gram}, je vysoký \SI{185}{\centi\metre} a~môžete predpokladať, že jeho ťažisko je v~$3/5$ jeho výšky.
-Vzdialenosť medzi jeho nohami je \SI{40}{\centi\metre} a~koeficient trenia medzi topánkami a podlahou metra je \num{0.5}.
-Maťa by teraz zaujímalo, pre aké hodnoty zrýchlenia sa mu podarí udržať rovnováhu presúvaním ťažiska z~jednej nohy na druhú.
+% [Kvík] Chcelo by to spomenúť, že vnútri je voda. Skúšal som to dobrú minútu ako úplný debil :-)
+% [MatoB] Mas to magicke slovko tam :)
 
-\insertPicture{task3}{4cm}[Maťovo ťažisko]
+\insertPicture{3.pdf}{4cm}[Čo vidí Enka][dotyk]
+
