--- a/files/fks/tasks/task5.tex
+++ b/files/fks/tasks/task5.tex
@@ -1,6 +1,3 @@
-\createTaskHeader[Poistka vs. Li-Ion články]
-Jaro sa hral s~$\SI{300}{\ampere}$ poistkou a~čuduj sa svete, podarilo sa mu ju prepáliť :).
-K~dispozícii mal ľubovoľne veľa Li-Ion článkov s~elektromotorickým napätím $\SI{3.3}{\volt}$ a~vnútorným odporom $\SI{10}{\milli\ohm}$.
-Vieme ich spájať pomocou ľubovoľného počtu dokonalých vodičov s~nulovým odporom do ľubovoľne veľkého zdroja.
-Na jeho konce pripojíme poistku s~odporom $\SI{10}{\milli\ohm}$. Nájdite všetky také zapojenia,
-pozostávajúce z~čo najmenšieho počtu článkov, ktoré prepália poistku.
+\createTaskHeader[Interaktívny]
+\emph{Tento príklad je interaktívny a jeho zadanie je len v~elektronickej podobe, ktorú nájdete na
+našej internetovej stránke} \href{\seminarURL}{\texttt{\seminarURL}}.
