--- a/files/fks/tasks/task7.tex
+++ b/files/fks/tasks/task7.tex
@@ -1,7 +1,9 @@
-\createTaskHeader[Nezelené hviezdy]
-Andrej sa veľmi rád pozerá na hviezdy, ale ešte radšej pri tom rozmýšľa nad dôležitými životnými otázkami.
-Väčšinou si na ne dokáže odpovedať sám. Minule však prišiel na niečo, čo mu už dlho nedá spať.
-Andreja by zaujímalo, prečo na oblohe nedokáže nájsť žiadnu hviezdu, ktorú by sme našimi očami videli ako zelenú.
-Pomôžte mu vyrovnať sa s~týmto problémom. Svoje argumenty sa snažte čo najviac podložiť výpočtami.
-Dokázali by ste povedať, akú farbu majú hviezdy, ktoré by \uv{mali mať zelenú farbu}
-(t.j. najviac žiarenia vyžarujú na vlnových dĺžkach blízkych \SI{530}{\nano\metre})?
+\createTaskHeader[Elektrický burger]
+Maťo sa minule hral s~plošným kondenzátorom s~dĺžkou $l$ a šírkou $s$, ktorého dosky boli od seba vzdialené $h$. 
+Medzi doskami kondenzátora bol pôvodne vzduch. Maťo kondenzátor najskôr nabil, takže medzi doskami kondenzátora bolo napätie $U$ a~potom kondenzátor odpojil od zdroja napájania. Maťo sa následne pokúšal do kondenzátora vložiť dielektrickú platničku 
+s~relatívnou permitivitou $\varepsilon_r$ a~hrúbkou $h$.
+
+Prečo na to musel vynaložiť silu? Akú veľkú? Ako by sa zmenil výsledok, ak by doštička bola vo vnútri kondenzátora 
+a~Maťo by sa ju pokúšal vybrať? Zmenil by sa výsledok, ak by bol kondenzátor stále pripojený na zdroj napájania s~konštantným napätím $U$?
+
+\insertPicture{7.pdf}{6cm}[Platnička vsúvaná medzi dosky kondenzátora][platnicka]
