--- a/files/fks/tasks/task4.tex
+++ b/files/fks/tasks/task4.tex
@@ -1,5 +1,6 @@
-\createTaskHeader[Ako špagety sajú]
-Zuzka si v~poslednom čase obľúbila špagety.
-Ako iste viete, keď namočíte špagety do vody, menia svoj objem.
-Zistite, koľko vody také špagety nasajú počas desiatich minút v~rôzne teplej vode.
-Potom si vyberte jednu teplotu vody a~pre tú odmerajte, ako závisí množstvo nasatej vody v~špagetách od času.
+\createTaskHeader[Mincohodnotometer]
+Dokážeme na základe zvuku dopadajúcej euromince zistiť, o~akú nominálnu hodnotu išlo?
+Odporúčame zvoliť si nejakú dobre tvrdú podlahu a~experiment zopakovať dostatočne veľakrát,
+aby sme získali dobrú štatistiku (nezabudnite si nahrať aj šum okolia).
+Následne skúste odpovedať na otázku, či je nejaká korelácia medzi tvarom spektra zvuku a~nominálnou hodnotou.
+Na analýzu zvuku odporúčame použiť program \emph{Audacity}. 
