--- a/files/fks/tasks/task6.tex
+++ b/files/fks/tasks/task6.tex
@@ -1,8 +1,7 @@
-\createTaskHeader[Tepelná kapacita]
-Kubo si postavil ďalší super stroj. Ten obsahoval komoru s~pohyblivým piestom, v~ktorej sa nachádzal ideálny jednoatómový plyn
-s~tlakom $p_0$, objemom $V_0$ a teplotou $T_0$ v~ustálenom stave. Piest je pripojený na pružinu tuhosti $k$. Ak odstránime plyn
-zo stroja, tak sa piest dotýka pravej steny nádoby. Pokojová dĺžka pružiny je rovnaká ako dĺžka celej komory. 
-Kuba by teraz zaujímalo, aká je tepelná kapacita takéhoto systému. 
-Predpokladajte, že tepelná kapacita materiálu pružiny a stien nádoby je zanedbateľná.
+\createTaskHeader[Hojdajúca sa osmička]
+Kaťa si do stredu izby na intráku zavesila lanko dĺžky $2l$. Uchytila ho do dvoch úchytov na strope vzdialených od seba $2a$.
+Potom si naň zavesila malú guľôčku, ktorá sa dokáže šmýkať na lanku bez trenia.
+Kaťu by teraz zaujímalo, aká musí byť dĺžka lanka, aby guľôčka vedela kmitať v~tvare osmičky.
+Skúste sa zamyslieť nad tým, aká musí byť perióda kmitov v~rôznych smeroch.
 
-\insertPicture{task6.pdf}{3cm}[Skúmaný stroj]
+\insertPicture{6.pdf}{4cm}[Kmitajúca guľôčka][gulocka]
