--- a/files/fks/solutions/task1.tex
+++ b/files/fks/solutions/task1.tex
@@ -1,5 +1,5 @@
 \createSolutionHeader[Vážna úvaha][Dušan][Dušan]
-Tak som sa teda zamyslel, a predsa len som na niečo prišiel.
+Tak som sa teda zamyslel, a~predsa len som na niečo prišiel.
 
 Najprv si povieme niečo o~váhe a~o~tom, ako funguje.
 To, čo naozaj meriame váhou, je sila, ktorou na ňu pôsobíme, nie hmotnosť.
