--- a/files/fks/solutions/task6.tex
+++ b/files/fks/solutions/task6.tex
@@ -1,4 +1,4 @@
-\createSolutionHeader[Tepelná kapacita][Maťo B][Maťo B]
+\createSolutionHeader[Tepelná kapacita][Maťo B.][Maťo B.]
 Najprv si pripomeňme, čo je to vlastne \emph{tepelná kapacita}.
 Tá nám hovorí, koľko energie vo forme tepla musíme \uv{zaplatiť} za to, aby sme ohriali systém o~jednotku teploty (napríklad jeden stupeň Celzia).%
 \footnote{Zdôrazňujeme však, že formálne nie je $\Delta$ pri $Q$ to isté ako $\Delta$ pri $T$, keďže teplo nie je \textbf{stavová veličina}!
