--- a/files/fks/solutions/task7.tex
+++ b/files/fks/solutions/task7.tex
@@ -11,11 +11,12 @@ ktoré dopadá do nášho oka, čiže toho, ako veľmi sú zastúpené rôzne vl
 Spektrum svetla, resp. žiarenia hviezd možno pre naše účely považovať za spektrum \emph{absolútne čierneho telesa}.
 Hviezdy však žiaria iba v~obmedzenom spektre, ktoré súvisí s~ich zložením a zodpovedá preskokom 
 elektrónov medzi rôznymi energetickými hladinami v~atómoch a molekulách, ktoré hviezdy tvoria.
-Ďalej budeme tento fakt veselo ignorovať a budeme hviezdy považovať za absolútne čierne telesá. Áno, viem ako zvláštne to znie :). No na to ste si už asi vo fyzike zvykli. Pravdou je, že pre väčšinu hviezd je takáto aproximácia dostatočná.
+Ďalej budeme tento fakt veselo ignorovať a budeme hviezdy považovať za absolútne čierne telesá. Áno, viem ako zvláštne to znie :). No na to ste si už asi vo fyzike zvykli.
+Pravdou je, že pre väčšinu hviezd je takáto aproximácia dostatočná.
 Aj keby sme prítomnosť spektrálnych čiar uvažovali, na výsledok by to nemalo veľký vplyv.
 Hviezda by totiž musela mať naozaj \emph{veľmi exotické} zloženie, aby to bolo dôvod na to, že ju vidíme zelenú. 
 
-\insertPicture{fraunhofer.pdf}{3cm}[Obrázok \emph{Fraunhoferových čiar} -- spektrálnych čiar v~spektre Slnka.%
+\insertPicture{fraunhofer.pdf}{4cm}[Obrázok \emph{Fraunhoferových čiar} -- spektrálnych čiar v~spektre Slnka.%
 %\footnote{Obrázok je prepožičaný z~\url{https://upload.wikimedia.org/wikipedia/commons/2/2f/Fraunhofer_lines.svg}.}
 ][fraunhofer]
 
@@ -30,7 +31,8 @@ kde $I$ označuje vyžiarený výkon na jednotku plochy, priestorový uhol a vln
 $$
   \lambda_{\text{max}} = \frac{\SI{2.898}{\milli\metre\kelvin}}{T}\text{,}
 $$
-nám pre každú teplotu hovorí, na ktorej vlnovej dĺžke $\lambda$ vyžaruje absolútne čierne teleso najviac žiarenia (teda pre aké $\lambda$ je $I(\lambda)$ maximálne). Vieme z~neho ľahko dopočítať, akú teplotu by musela mať hviezda, aby najviac žiarenia vyžarovala na vlnovej dĺžke $\lambda = \SI{530}{\nano\metre}$, čo je približne zelená.
+nám pre každú teplotu hovorí, na ktorej vlnovej dĺžke $\lambda$ vyžaruje absolútne čierne teleso najviac žiarenia (teda pre aké $\lambda$ je $I(\lambda)$ maximálne).
+Vieme z~neho ľahko dopočítať, akú teplotu by musela mať hviezda, aby najviac žiarenia vyžarovala na vlnovej dĺžke $\lambda = \SI{530}{\nano\metre}$, čo je približne zelená.
 Ľahkým dosadením zistíme, že hviezda by musela mať teplotu $T \approx \SI{5470}{\kelvin}$, čo vôbec nie je nezvyčajná teplota pre hviezdu! 
 
 Ako to, že teda nepozorujeme na oblohe zelené hviezdy? Hviezdy, ktoré vyžarujú najviac žiarenia v~zelenej časti spektra, vyžarujú veľa žiarenia aj vo zvyšku viditeľnej časti spektra.
@@ -59,4 +61,7 @@ odporúčame si prečítať v~Archive FKS vzorák k~úlohe Vlnitá panoráma z~2
 Iný spôsob bol priamo nájsť približné vzťahy\footnote{\url{https://en.wikipedia.org/wiki/Planckian_locus\#Approximation}} na výpočet $X$ a $Y$ súradníc v~$CEI$ farebnom spektre priamo z~teploty a potom prepočítať na RGB farbu.
 
 Či už zvolíme prvý alebo druhý spôsob, dopátrame sa k~skoro čisto bielej farbe\footnote{[0.333, 0.342] v~CEI 1931 Color space}.
-\uv{Zelené hviezdy} sú teda v~skutočnosti biele. Pravdou je, že v~tom obrovskom množstve hviezd sa môže nachádzať zopár hviezd s~takým exotickým zložením, že vďaka absorbčnému a emisnému spektru prvkov, z~ktorých sa bude skladať, sa nám bude zdať zelená, no žiadnu sme doteraz nenašli. Ak len predsa len narazíte na nejaký obrázok či fotku v~hviezdy v~zelenej farbe, napr. na stránke NASA, ide o~počítačovo upravenú fotku s~umelými farbami.
+\uv{Zelené hviezdy} sú teda v~skutočnosti biele. Pravdou je, že v~tom obrovskom množstve hviezd sa môže
+nachádzať zopár hviezd s~takým exotickým zložením, že vďaka absorbčnému a emisnému spektru prvkov, z~ktorých sa bude skladať,
+sa nám bude zdať zelená, no žiadnu sme doteraz nenašli. Ak len predsa len narazíte na nejaký obrázok
+či fotku v~hviezdy v~zelenej farbe, napr. na stránke NASA, ide o~počítačovo upravenú fotku s~umelými farbami.
