--- a/tasks.tex
+++ b/tasks.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt, twoside]{article}
 
-\usepackage{trojsten}
+\usepackage{dgs}
 
 \input{config}
 \input{current}
@@ -15,7 +15,7 @@
     {
         \centering
         {\Huge Zadania \currentSeries. série \currentPartGenitive\ časti}\\[0pt]
-        {\footnotesize Termín odoslania \currentDeadline}\\[-2pt]
+        {Termín odoslania \currentDeadline}\\[2pt]
     } 
         
     \pagestyle{tasks}    
