--- a/dgs-config-fks.sty
+++ b/dgs-config-fks.sty
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}[2011/01/01]
-\ProvidesPackage{trojsten-config-fks}[2015/09/08 Trojsten unified TeX -- configuration file for FKS]
+\ProvidesPackage{dgs-config-fks}[2015/09/08 Trojsten unified TeX -- configuration file for FKS]
 
 \RenewDocumentCommand{\seminarID}{}{fks}
 \RenewDocumentCommand{\seminarShort}{}{FKS}
