--- a/dgs-config-kms.sty
+++ b/dgs-config-kms.sty
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}[2011/01/01]
-\ProvidesPackage{trojsten-config-kms}[2015/09/11 Trojsten unified TeX -- configuration file for KMS]
+\ProvidesPackage{dgs-config-kms}[2015/09/11 Trojsten unified TeX -- configuration file for KMS]
 
 \RenewDocumentCommand{\seminarID}{}{kms}
 \RenewDocumentCommand{\seminarShort}{}{KMS}
