--- a/dgs-config-ksp.sty
+++ b/dgs-config-ksp.sty
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}[2011/01/01]
-\ProvidesPackage{trojsten-config-ksp}[2015/09/11 Trojsten unified TeX -- configuration file for KSP]
+\ProvidesPackage{dgs-config-ksp}[2015/09/11 Trojsten unified TeX -- configuration file for KSP]
 
 \RenewDocumentCommand{\seminarID}{}{ksp}
 \RenewDocumentCommand{\seminarShort}{}{KSP}
