--- a/dgs-config-ufo.sty
+++ b/dgs-config-ufo.sty
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}[2011/01/01]
-\ProvidesPackage{trojsten-config-ufo}[2015/10/04 Trojsten unified TeX -- configuration file for UFO]
+\ProvidesPackage{dgs-config-ufo}[2015/10/04 Trojsten unified TeX -- configuration file for UFO]
 
 \RenewDocumentCommand{\seminarID}{}{ufo}
 \RenewDocumentCommand{\seminarShort}{}{UFO}
