--- a/dgs-config.sty
+++ b/dgs-config.sty
@@ -1,3 +1,6 @@
+\NeedsTeXFormat{LaTeX2e}[2011/01/01]
+\ProvidesPackage{dgs-config}[2015/10/10 Trojsten DGS config defaults file]
+
 \NewDocumentCommand{\seminarID}{}{<undefined>}
 \NewDocumentCommand{\seminarShort}{}{<undefined>}
 \NewDocumentCommand{\seminarFull}{}{<undefined seminar name>}
