--- a/dgs.sty
+++ b/dgs.sty
@@ -45,9 +45,7 @@
     range-phrase            = {\ --\ },
     list-units              = single,                       %
     list-final-separator    = {\ a\ },                      % 5, 7 a 10 m/s
-%    text-celsius            = {°C}                          % použiť dva znaky pre stupeň Celzia, miesto ligatúry
 ]{siunitx}
-\DeclareSIUnit{\gforce}{g}
 
 \RequirePackage{
     amsmath,
@@ -69,6 +67,7 @@
     afterpage,
     pgffor,
     longtable,
+	csvsimple,
     fancyvrb                                                % fancy verbatim (currently unused)
 }
 
