--- a/files/fks/solutions/task7.tex
+++ b/files/fks/solutions/task7.tex
@@ -11,7 +11,7 @@ ktoré dopadá do nášho oka, čiže toho, ako veľmi sú zastúpené rôzne vl
 Spektrum svetla, resp. žiarenia hviezd možno pre naše účely považovať za spektrum \emph{absolútne čierneho telesa}.
 Hviezdy však žiaria iba v~obmedzenom spektre, ktoré súvisí s~ich zložením a zodpovedá preskokom 
 elektrónov medzi rôznymi energetickými hladinami v~atómoch a molekulách, ktoré hviezdy tvoria.
-Ďalej budeme tento fakt veselo ignorovať a budeme hviezdy považovať za absolútne čierne telesá. Áno, viem ako zvláštne to znie :). No na to ste si už asi vo fyzike zvykli.
+Ďalej budeme tento fakt veselo ignorovať a budeme hviezdy považovať za absolútne čierne telesá. Áno, viem ako zvláštne to znie~:). No na to ste si už asi vo fyzike zvykli.
 Pravdou je, že pre väčšinu hviezd je takáto aproximácia dostatočná.
 Aj keby sme prítomnosť spektrálnych čiar uvažovali, na výsledok by to nemalo veľký vplyv.
 Hviezda by totiž musela mať naozaj \emph{veľmi exotické} zloženie, aby to bolo dôvod na to, že ju vidíme zelenú. 
