--- a/current.tex
+++ b/current.tex
@@ -1,8 +1,8 @@
-\loadSeminar{fks}
+\loadSeminar{fx}
 \RenewDocumentCommand{\currentYear}{}{2015}
 \RenewDocumentCommand{\currentPart}{}{1}
-\RenewDocumentCommand{\currentSeries}{}{3}
-\RenewDocumentCommand{\currentDeadline}{}{30. 11. 2015}
+\RenewDocumentCommand{\currentSeries}{}{1}
+\RenewDocumentCommand{\currentDeadline}{}{11. 01. 2016}
 
 %this file will be generated automatically by Django
 %should not add anything here unless it's this-booklet-specific
