--- a/tasks.tex
+++ b/tasks.tex
@@ -1,8 +1,8 @@
 \documentclass[12pt, twoside]{article}
 
 \usepackage{dgs}
+\usepackage{dgs-config}
 
-\input{config}
 \input{current}
 \input{custom}
 
