--- a/dgs-config-fx.sty
+++ b/dgs-config-fx.sty
@@ -8,6 +8,7 @@
 \RenewDocumentCommand{\seminarDepartmentShort}{}{KTFDF}
 \RenewDocumentCommand{\seminarDepartmentFull}{}{Katedra teoretickej fyziky a didaktiky fyziky}
 \RenewDocumentCommand{\seminarEmail}{}{fx@fks.sk}
-\RenewDocumentCommand{\seminarFounded}{}{2004}
+\RenewDocumentCommand{\seminarFounded}{}{2005}
 \RenewDocumentCommand{\seminarTaskCount}{}{3}
 
+\RenewDocumentCommand{\getTaskCategories}{m}{}
