--- a/files/fx/tasks/task2.tex
+++ b/files/fx/tasks/task2.tex
@@ -10,11 +10,11 @@ určená elektrostatickou interakciou so susednými molekulami.
 \begin{enumerate}
 	\item Molekula \textbf{CO} má malý elektrický \textbf{dipólový moment} $\vec{p}$.
 		Na obrázku sa nachádza časť šachovnice, kde je orientácia dipólových momentov parametrizovaná uhlom $\alpha$.
-		Uvažujme interakciu každej molekuly -- dipólu, len s~jej najbližšími ôsmymi susedmi.
+		Uvažujme interakciu každej molekuly -- dipólu, len s~jej najbližšími ôsmimi susedmi.
 		Pomôžte Bzdušovi nájsť uhol $\alpha$, ktorý minimalizuje celkovú energiu $\mathrm{E}_\text{min}$
 		a~nájdite veľkosť tejto energie.
 		
-		\insertPicture{sachovnica.png}{25mm}[Usporiadanie do šachovnice na povrchu kryštálu][fig:1]
+		\insertPicture{sachovnica.png}{20mm}[Usporiadanie do šachovnice na povrchu kryštálu][fig:1]
 
 	\item Molekuly $\text{N}_2$ majú malý \textbf{kvadrupólový moment}, pretože kovalentné väzby vytvárajú
 		malý negatívny náboj v~oblasti medzi atómovými jadrami. Na základe tohto faktu a~kvalitatívneho odhadu
