--- a/files/fx/tasks/task3.tex
+++ b/files/fx/tasks/task3.tex
@@ -3,7 +3,7 @@ Mišo začal uvažovať, že si doma postaví stroj, ktorý by spaľovaním info
 Mišo má informáciu uloženú na pomerne neštandardnom médiu, páske pozostávajúcej z~krabíc rovnakej veľkosti,
 pričom v~každej sa nachádza jeden atóm ideálneho plynu.
 
-\insertPicture{paska.png}{15mm}[Mišovo médium][fig:3]
+\insertPicture{paska.png}{30mm}[Mišovo médium][fig:3]
 
 Každá krabica je rozdelená priehradkou na dve rovnaké časti. Priehradku vieme kedykoľvek vybrať.
 Horná a~dolná stena krabice sú piesty, ktoré sa pohybujú bez trenia a~vedia tak konaním práce tlačiť
@@ -14,9 +14,9 @@ Všimnite si, že ak vieme, v~ktorej časti krabice sa atóm nachádza, tak viem
 časti krabice smerom k~priehradke, odstrániť priehradku a~nechať piest vrátiť sa do pôvodnej pozície.
 Zničíme tak informáciu, kde sa nachádza atóm, no vieme tak získať užitočnú prácu.
 
-\insertPicture{spalenie.png}{15mm}[Mišovo médium][fig:3:2]
+\insertPicture{spalenie.png}{30mm}[Mišovo médium][fig:3:2]
 
-\begin{enumerate}[(a)]
+\begin{enumerate}
 	\item Predpokladajme, že plyn sa rozpína pri konštantnej teplote $T$.
 		Aké množstvo práce vieme získať \uv{spálením} jedného bitu informácie?
 	\item Ukážte, že zmenu stavu krabice (z~nuly na jednotku alebo opačne) vieme urobiť vratne a~zadarmo,
