--- a/dgs-config-fx.sty
+++ b/dgs-config-fx.sty
@@ -3,12 +3,10 @@
 
 \RenewDocumentCommand{\seminarID}{}{fx}
 \RenewDocumentCommand{\seminarShort}{}{FX}
-\RenewDocumentCommand{\seminarFull}{}{Fyzikálny korešpondenčný seminár}
-\RenewDocumentCommand{\seminarURL}{}{http://fks.sk/fx}
+\RenewDocumentCommand{\seminarFull}{}{Fyzikálny korešpondenčný seminár, kategória FX}
+\RenewDocumentCommand{\seminarURL}{}{http://fx.fks.sk/}
 \RenewDocumentCommand{\seminarDepartmentShort}{}{KTFDF}
 \RenewDocumentCommand{\seminarDepartmentFull}{}{Katedra teoretickej fyziky a didaktiky fyziky}
 \RenewDocumentCommand{\seminarEmail}{}{fx@fks.sk}
 \RenewDocumentCommand{\seminarFounded}{}{2005}
 \RenewDocumentCommand{\seminarTaskCount}{}{3}
-
-\RenewDocumentCommand{\getTaskCategories}{m}{}
