--- a/dgs-config.sty
+++ b/dgs-config.sty
@@ -32,9 +32,7 @@
 
 \NewDocumentCommand{\currentFolder}{}{<undefined folder>}
 
-\NewDocumentCommand{\getTaskCategories}{m}{%
-    \errorMessage{<undefined categories> Please override \backslash getTaskCategories macro in your seminar’s config file}%
-}
+\NewDocumentCommand{\getTaskCategories}{m}{}
 
 \NewDocumentCommand{\formatTaskPoints}{O{9} O{}}{}
 \NewDocumentCommand{\formatTaskCategories}{O{} O{}}{%
