--- a/files/fx/tasks/task3.tex
+++ b/files/fx/tasks/task3.tex
@@ -14,7 +14,7 @@ Všimnite si, že ak vieme, v~ktorej časti krabice sa atóm nachádza, tak viem
 časti krabice smerom k~priehradke, odstrániť priehradku a~nechať piest vrátiť sa do pôvodnej pozície.
 Zničíme tak informáciu, kde sa nachádza atóm, no vieme tak získať užitočnú prácu.
 
-\insertPicture{spalenie.png}{30mm}[Mišovo médium][fig:3:2]
+\insertPicture{spalenie.png}{30mm}[Spálenie informácie][fig:3:2]
 
 \begin{enumerate}
 	\item Predpokladajme, že plyn sa rozpína pri konštantnej teplote $T$.
