Added KMS, nicer coloured links and minor fixes

--- a/dgs-config-fx.sty
+++ b/dgs-config-fx.sty
@@ -10,3 +10,7 @@
 \RenewDocumentCommand{\seminarEmail}{}{fx@fks.sk}
 \RenewDocumentCommand{\seminarFounded}{}{2005}
 \RenewDocumentCommand{\seminarTaskCount}{}{3}
+
+% hyperref URL link colour
+\definecolor{color-link}{rgb}{0.6, 0.2, 0.1}
+
