--- a/dgs-config-ksp.sty
+++ b/dgs-config-ksp.sty
@@ -11,6 +11,9 @@
 \RenewDocumentCommand{\seminarFounded}{}{1983}
 \RenewDocumentCommand{\seminarTaskCount}{}{3}
 
+% hyperref URL link colour
+\definecolor{color-link}{rgb}{0.1, 0.7, 0.1}
+
 \RenewDocumentCommand{\getTaskCategories}{m}{%
     \switch[\number#1=]%
         \case{1}\formatTaskCategories[Z]%
