--- a/files/fx/tasks/task1.tex
+++ b/files/fx/tasks/task1.tex
@@ -1,7 +1,7 @@
 \createTaskHeader[Kotúľanie loptičiek]
 Miro sa začal hrávať s~loptičkami a~pri tom si všimol, že kotúľanie loptičiek bez prešmykovania
 po vodorovnej podložke vlastne vôbec nemusí byť také nezaujímavé, ako sa môže zdať.
-\begin{enumerate}
+\begin{enumerate}[label=\alph*)]
 	\item Štandardný spôsob, ako sa môže kotúľať loptička bez prešmykovania, je taký,
 		že množina dotykových bodov s~podložkou tvorí kružnicu s~polomerom samotnej loptičky.
 		Vašou úlohu v~tejto podúlohe je zistiť a~správne odargumentovať,
