--- a/files/fx/tasks/task2.tex
+++ b/files/fx/tasks/task2.tex
@@ -7,7 +7,7 @@ Bzdušo si všimol, že dvojatómové molekuly sú absorbované takým spôsobom
 že ich dlhšia os je rovnobežná s~povrchom a~orientácia každej molekuly je
 určená elektrostatickou interakciou so susednými molekulami.
 
-\begin{enumerate}
+\begin{enumerate}[label=\alph*)]
 	\item Molekula \textbf{CO} má malý elektrický \textbf{dipólový moment} $\vec{p}$.
 		Na obrázku sa nachádza časť šachovnice, kde je orientácia dipólových momentov parametrizovaná uhlom $\alpha$.
 		Uvažujme interakciu každej molekuly -- dipólu, len s~jej najbližšími ôsmimi susedmi.
