--- a/dgs-config-fks.sty
+++ b/dgs-config-fks.sty
@@ -11,6 +11,9 @@
 \RenewDocumentCommand{\seminarFounded}{}{1985}
 \RenewDocumentCommand{\seminarTaskCount}{}{7}
 
+% hyperref URL link colour
+\definecolor{color-link}{rgb}{0.7, 0.4, 0.1}
+
 \RenewDocumentCommand{\getTaskCategories}{m}{%
     \switch[\number#1=]%
         \case{1}\formatTaskCategories[B0]%
