--- a/dgs-config-kms.sty
+++ b/dgs-config-kms.sty
@@ -11,6 +11,9 @@
 \RenewDocumentCommand{\seminarFounded}{}{1983}
 \RenewDocumentCommand{\seminarTaskCount}{}{10}
 
+% hyperref URL link colour
+\definecolor{color-link}{rgb}{0.1, 0.1, 0.7}
+
 \RenewDocumentCommand{\getTaskCategories}{m}{
     \switch[\number#1=]
         \case{1}$\kappa \leq 1$\qquad\formatTaskCategories[$\boldsymbol{\alpha}$]%
