Monstrous overhaul, everything broken

--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 # Known issues
 - v \num sa typesetuje hnusná čiarka
- finetunovať polohy vecí v headeri
+- finetunovať polohy vecí v headeri
 
 # Feature requests
 - viacero autorov vzoráku (xkeyval alebo oddeliť bodkočiarkami, potom typeset čiarok a "a" bez boldu)
