--- a/solutions.tex
+++ b/solutions.tex
@@ -6,7 +6,7 @@
 \input{current}
 \input{custom}
 
-\RenewDocumentCommand{\currentFolder}{}{files/\seminarID/solutions}
+\RenewDocumentCommand{\currentFolder}{}{input/solutions}
 
 \begin{document}            
     \thispagestyle{first} 
