--- a/tasks.tex
+++ b/tasks.tex
@@ -6,7 +6,7 @@
 \input{current}
 \input{custom}
 
-\RenewDocumentCommand{\currentFolder}{}{files/\seminarID/tasks}
+\RenewDocumentCommand{\currentFolder}{}{input/tasks}
 
 \begin{document}            
     \thispagestyle{first} 
