--- a/singletask.tex
+++ b/singletask.tex
@@ -3,7 +3,7 @@
 \usepackage{dgs}
 \usepackage{dgs-config}
 
-\loadDocumentSettings
+\input{current}
 \input{custom}
 
 \RenewDocumentCommand{\currentFolder}{}{input/tasks}
