--- a/solutions.tex
+++ b/solutions.tex
@@ -3,8 +3,9 @@
 \usepackage{dgs}
 \usepackage{dgs-config}
 
-\input{current}
 \input{custom}
+\loadDocumentSettings
+
 
 \RenewDocumentCommand{\currentFolder}{}{input/solutions}
 
