Minor changes to Makefile

--- a/source/solutions/task7.tex
+++ b/source/solutions/task7.tex
@@ -1,4 +1,4 @@
-\createSolutionHeader[Nezelené hviezdy][Maťo B][Maťo B]
+\createSolutionHeader[Nezelené hviezdy][Maťo B.][Maťo B.]
 Predtým, než si zodpovieme otázku zo zadania, si vyjasnime, čo je to vlastne \emph{farba}. 
 
 \emph{Farba} je čisto subjektívny pocit a interpretácia svetla istej vlnovej dĺžky našim okom a mozgom.
