--- a/source/solutions/task3.tex
+++ b/source/solutions/task3.tex
@@ -22,7 +22,7 @@ Maťa \uv{ťahať} doľava, trecie sily sa budú snažiť tomuto pohybu brániť
 smerom doprava (viď obrázok \ref{sily}). Veľkosť trecích síl je
 z~definície $T_1 = f F_1$ a $T_2 = f F_2$, kde $f$ je trecí koeficient.
 
-\insertPicture{task3-mato.pdf}{3cm}[Sily pôsobiace na Maťa][sily]
+\insertPicture{task3-mato.pdf}{45mm}[Sily pôsobiace na Maťa][sily]
 
 Situácia na obrázku vyzerá optimisticky -- všetky zakreslené sily pôsobia
 buď vo vodorovnom alebo v~zvislom smere. Okamžite preto môžeme napísať
