Simplified Makefile, changed link colours

--- a/dgs.sty
+++ b/dgs.sty
@@ -78,12 +78,13 @@
 	width					= 0.9\textwidth
 }
 
-\definecolor{color-link}{rgb}{0.1, 0.1, 0.5}
+\definecolor{colour-url}{rgb}{0.0, 0.0, 0.5}
+\definecolor{colour-link}{rgb}{0.0, 0.0, 0.5}
 
 \RequirePackage[
 	colorlinks				= true,
-	linkcolor				= black,
-	urlcolor				= color-link,
+	linkcolor				= colour-link,
+	urlcolor				= colour-url,
 ]{hyperref}
 
 
