--- a/source/solutions/task4.tex
+++ b/source/solutions/task4.tex
@@ -41,7 +41,6 @@ Pri prvom experimente bola počiatočná hmotnosť špagiet $\SI{19}{\gram}$, pr
         3. & 80   & 14  \\
         4. & 90   & 19  \\
         5. & 100  & 19  \\
-    \bottomrule \\[4mm]
     \caption{\textit{Prírastky hmotnosti špagiet po desiatich minútach v~rôznych teplotách vody}}
 \end{longtable}
 
@@ -66,13 +65,13 @@ Pri prvom experimente bola počiatočná hmotnosť špagiet $\SI{19}{\gram}$, pr
 
 Odmerané máme, môžeme pristúpiť k~interpretácii údajov. Tu sa ujíma slova ľubovoľný tabuľkový editor. Mohli ste použiť {\it Excel}, {\it LibreOffice Calc}, \dots. Na vykreslenie grafov sme sa však rozhodli použiť \textit{Gnuplot}.
 
-Grafický výstup merania závislosti prírastku hmotnosti špagiet od teploty (prvá časť úlohy) by mohol vyzerať nejako takto: 
+Grafický výstup merania závislosti prírastku hmotnosti špagiet od teploty (prvá časť úlohy) by mohol vyzerať nejako takto:
 
-\insertPicture{task4-graph1.pdf}{85mm}[Grafické spracovanie prvého merania (Áno, nemám graf plný bodov, lebo som si povedala, že na ukážku to bude stačiť. Verím, že vy máte lepšie.)][first]
+\insertPicture{task4-graph1.pdf}{80mm}[Grafické spracovanie prvého merania (Áno, nemám graf plný bodov, lebo som si povedala, že na ukážku to bude stačiť. Verím, že vy máte lepšie.)][first]
 
 Druhé meranie nám poskytlo takýto výsledok:
-
-\insertPicture{task4-graph2.pdf}{85mm}[Grafické spracovanie druhého merania][second]
+\nopagebreak
+\insertPicture{task4-graph2.pdf}{80mm}[Grafické spracovanie druhého merania][second]
 
 %V~tomto prípade ide očividne o~lineárnu závislosť. Opäť vieme veľmi jednoducho zistiť jej koeficienty a~ak sme veľkí makači,
 %pomocou funkcie LINEST\footnote{\url{http://www.colby.edu/chemistry/PChem/notes/linest.pdf}} vieme zistiť smerodajné odchýlky týchto koeficientov.
@@ -83,7 +82,7 @@ Na záver nám zostáva zamyslieť sa, čo všetko nám mohlo spôsobiť nepresn
 V~prvom rade to boli úniky tepla do okolia. V~kuchynských podmienkach sa ťažko vyrába dokonale izolovaná sústava. 
 Pri použití termohrnčeka (malej termosky), tieto straty obmedzíme, no ako bolo spomenuté, teplota sa počas merania môže zmeniť
 o~niekoľko stupňov.\footnote{Táto zmena bude určite menšia ako $\SI{10}{\celsius}$, čo sú rozdiely medzi nami 
-meranými teplotami.} Okrem toho teplomer mal presnosť $\pm \SI{1}{\celsius}$, čo chyba rádovo na úrovni tých, čo spôsobili 
+meranými teplotami.} Okrem toho teplomer mal presnosť $\pm \SI{1}{\celsius}$, čo je chyba rádovo na úrovni tých, čo spôsobili 
 úniky tepla. 
 Ďalšími meranými veličinami bol čas a hmotnosť špagiet. Nepresnosti stopiek a váhy sú dostačne malé na to, 
 aby signifikantne prispievali k~chybám merania. No je tu ešte jedna vec, na ktorú nemôžeme zabudnúť, 
