--- a/TODO
+++ b/TODO
@@ -1,3 +1,8 @@
+# Ask
+- chceme jar/jeseň alebo leto/zima? autumn/spring má veľkú výhodu, že je v abecede v správnom poradí :-)
+- chceme zosypať zadania a vzoráky do jedného? Kvík je za
+- bude task01.md, solution01.md, task02.md, solution02.md ...
+
 # Known issues
 - v \num sa typesetuje hnusná čiarka
 - finetunovať polohy vecí v headeri
