Added fonts and minor fixes to Makefile

--- a/dgs.sty
+++ b/dgs.sty
@@ -106,7 +106,7 @@
     Scale           = MatchLowercase,
     Ligatures       = TeX
 }
-
+%\setallmainfonts{Gentium Book Basic}
 %\setallmainfonts[
 %    Path            = fonts/ ,
 %    Extension       = .otf ,
