--- a/source/solutions/task4.tex
+++ b/source/solutions/task4.tex
@@ -41,6 +41,7 @@ Pri prvom experimente bola počiatočná hmotnosť špagiet $\SI{19}{\gram}$, pr
         3. & 80   & 14  \\
         4. & 90   & 19  \\
         5. & 100  & 19  \\
+	\bottomrule
     \caption{\textit{Prírastky hmotnosti špagiet po desiatich minútach v~rôznych teplotách vody}}
 \end{longtable}
 
@@ -84,12 +85,11 @@ Pri použití termohrnčeka (malej termosky), tieto straty obmedzíme, no ako bo
 o~niekoľko stupňov.\footnote{Táto zmena bude určite menšia ako $\SI{10}{\celsius}$, čo sú rozdiely medzi nami 
 meranými teplotami.} Okrem toho teplomer mal presnosť $\pm \SI{1}{\celsius}$, čo je chyba rádovo na úrovni tých, čo spôsobili 
 úniky tepla. 
-Ďalšími meranými veličinami bol čas a hmotnosť špagiet. Nepresnosti stopiek a váhy sú dostačne malé na to, 
+Ďalšími meranými veličinami bol čas a hmotnosť špagiet. Nepresnosti stopiek a váhy sú dostatočne malé na to, 
 aby signifikantne prispievali k~chybám merania. No je tu ešte jedna vec, na ktorú nemôžeme zabudnúť, 
 a to je dostatočné scedenie špagiet. Ak to neurobíme poriadne, nejaká voda nám tam zostane. Pokojne aj gram, či dva. 
 Zdá sa to málo, ale keď sa zamyslíme nad tým, aké hmotnosti meriame, tak už i ten gram navyše nám spôsobí nepresnosť 
 \SIrange{5}{10}{\percent}. Zvyšné zdroje, ako rozpúšťanie škrobu zo špagiet do vody, alebo odparovanie vody zo špagiet počas merania,
 nemá zmysel uvažovať, lebo ich efekt je rádovo menší, ako tých pred chvíľou spomenutých.
-až po nejakú tú hmotnosť navyše spôsobenú nedostatočným odkvapkaním scedených špagiet.
 
 A~máme hotovo, môžeme ísť jesť. Keby mal niekto záujem o~recept na mega pseudobolonskú omáčku, ktorá je jednoduchá a~určite nesklame, napíšte mi ;).
