--- a/source/solutions/task7.tex
+++ b/source/solutions/task7.tex
@@ -51,12 +51,12 @@ Môžeme použiť buď tento obrázok\footnote{\url{https://upload.wikimedia.org
 alebo si to skúsime sami vypočítať. Na to, aby sme to vypočítali, však musíme vedieť, ako presne sú naše čapíky citlivé na svetlo rôznych vlnových dĺžok.
 Našťastie nemusíme dlho hladať, pretože ak sa trošku posnažíme, dopátrame sa k~tzv.
 \emph{CIE color matching functions}\footnote{\url{https://en.wikipedia.org/wiki/CIE_1931_color_space\#Color_matching_functions}},
-čo sú štandardizované citlivosti čapíkov na rôzne vlnové dlžky. Samotné tabuľky $x$, $y$ a $z$ funkcií možno nájsť napríklad tu\footnote{\url{http://cvrl.ioo.ucl.ac.uk/cmfs.htm}}.
+čo sú štandardizované citlivosti čapíkov na rôzne vlnové dĺžky. Samotné tabuľky $x$, $y$ a $z$ funkcií možno nájsť napríklad tu\footnote{\url{http://cvrl.ioo.ucl.ac.uk/cmfs.htm}}.
 
 Stačí si teda otvoriť tabuľkový procesor, nakopírovať si tabuľky $x$, $y$ a $z$ funkcií (napr. po $\SI{0.1}{\nano\metre}$), prenásobiť vo viditeľnom spektre spektrom
 absolútne čierneho telesa teploty $T \approx \SI{5470}{\kelvin}$ a následne sčítať po malých kúskoch (napr. po $\SI{0.1}{\nano\metre}$)
-(viď článok o~\emph{Color matching functions}).\footnote{Ak vám táto myšlienka sčitovania po malých kúskoch nie je jasná,
-odporúčame si prečítať v~Archive FKS vzorák k~úlohe Vlnitá panoráma z~29. ročníka.} Nakoniec už len nájsť spôsob ako čísla \emph{color functions} $X$, $Y$ a $Z$ prepočítať na RGB farbu. 
+(viď článok o~\emph{Color matching functions})\footnote{Ak vám táto myšlienka sčitovania po malých kúskoch nie je jasná,
+odporúčame si prečítať v~Archive FKS vzorák k~úlohe Vlnitá panoráma z~29. ročníka.}. Nakoniec ostáva už len nájsť spôsob ako čísla \emph{color functions} $X$, $Y$ a $Z$ prepočítať na RGB farbu. 
 
 Iný spôsob bol priamo nájsť približné vzťahy\footnote{\url{https://en.wikipedia.org/wiki/Planckian_locus\#Approximation}} na výpočet $X$ a $Y$ súradníc v~$CEI$ farebnom spektre priamo z~teploty a potom prepočítať na RGB farbu.
 
